# sky_burrito

./: .gitignore  00_RL_COMPLETE_STATUS.md  00_START_HERE.md  ALL_132_ROUTES_ANALYSIS.md  COMPLETE_ROUTE_CALCULATIONS.md  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STATUS.md  ENHANCEMENTS_SUMMARY.md  FINAL_SUMMARY_REPORT.md  FULFILLMENT_RATE_REPORT.md  IMPLEMENTATION_NOTES.md  MARKDOWN_UPDATES.txt  MASTER_DOCUMENTATION.md  MGK_INTEGRATION_COMPLETE.md  MGK_INTEGRATION_FINAL.txt  MGK_INTEGRATION_GUIDE.md  MGK_INTEGRATION_SUMMARY.md  MULTI_HUB_INITIALIZATION_FIX.md  PHASE_10_SUMMARY.md  PHASE_1_TRAINING_COMPLETE.md  PHASE_2_3_READY.md  PHASE_2_3_TRAINING_LIVE.md  PHASE_2_TRAINING_COMPLETE.md  PHASE_3_INFERENCE_RESULTS.md  PHASE_3_READY.md  QUICK_REFERENCE_RL_TRAINING.md  QUICK_START.md  QUICK_START_RL.md  README.md  RL_DOCUMENTATION_INDEX.md  RL_FLEET_OPTIMIZATION_DESIGN.md  RL_FULFILLMENT_FIX_COMPLETE.md  RL_IMPLEMENTATION_COMPLETE.md  RL_IMPLEMENTATION_GUIDE.md  RL_LATEST_SUMMARY.md  RL_QUICK_REFERENCE.md  RL_TRAINING_BUG_FIX_STATUS.md  RL_TRAINING_CONVERGENCE_VALIDATION.md  (+14 more)
SOTU/: corridor_pruning.md  dispatching.md  hub_sizing.md  simulation.md
cli/: __init__.py  commands.py  parser.py
corridor_pruning/: __init__.py  carbon_footprint.py  corridors.py  driver_economics.py  drone_model.py  ground_model.py  hubs.py  obstacles.py  pruning.py
data_processing/: __init__.py  buildings.py  config.py  residential.py  restaurants.py  street_network.py
hub_sizing/: __init__.py  demand.py  mgk.py  service.py  sizing.py
settings/: rl.py  (+6 more)
(+83 files in other folders)
