[project]
name = "sky-burrito"
version = "0.1.0"
description = "SF inter-district drone delivery network — spatial siting and dynamic network modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "osmnx>=1.9",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "streamlit>=1.35",
    "pydeck>=0.9",
    "gymnasium>=1.0",
    "stable-baselines3>=2.0",
    "tensorboard>=2.0",
    "torch>=2.0",
    "tqdm>=4.67.3",
    "rich>=15.0.0",
]

[project.scripts]
sky-burrito = "main:cli"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
